chore: correction and update frontend login profile page

--- a/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/login.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/fragment/in-up/login.html
@@ -36,7 +36,7 @@
                2). This method properties means these data won't go to the url but to the request-body
                     -->
                 <form
-                        data-th-action="@{'/user/profile'}"
+                        data-th-action="@{user/profile}"
                         method="POST"
                         class="mt-5"
                         >
