--- a/full-stack-contactMgmtSys/src/main/resources/templates/user/dashboard.html
+++ b/full-stack-contactMgmtSys/src/main/resources/templates/user/dashboard.html
@@ -1,19 +1,20 @@
 <!DOCTYPE html>
-<!-- namespace of thyemeleaf denoted by xmlns:th
-    th-fragment id syntax for creating fragment-->
+<!-- th:replace will use "parent" fragment from "index" file -->
 <html lang="en"
       xmlns:th="http://www.thymeleaf.org"
       th:replace="~{index :: parent(~{::#content},~{::title},~{::script})}">
 <head>
-<!--    <title data-th-text="${loggedInUser.name} +' | SCM '">Contact Smartly</title>-->
-    <title>Contact Smartly</title>
-
+    <title>Hello</title>
+<!--    <title data-th-text="${loggedInUser.name}+' | Dashboard'">User</title>-->
 </head>
 <body>
+<div id="content">
+    <h1>User's dashboard</h1>
 
-<h1 id="content">Welcome to Personal Profile page</h1>
-<h2>Here are the basic summary</h2>
-
-<!--<script src="https://cdn.jsdelivr.net/npm/flowbite@2.5.2/dist/flowbite.min.js"></script>-->
+<a data-th-href="@{'/do-logout'}">Logout</a>
+</div>
+<script>
+    console.log("About page")
+</script>
 </body>
 </html>
